[B] e2e test battles
