# src/apps/CryptoWars/backend/Controllers/Attacks/SendAttackRequest.ts
@@ -1,0 +1,7 @@
+import { TownSoldiersPrimitives } from '../../../../../Contexts/CryptoWars/Towns/domain/TownSoldiers';
+
+export type SendAttackRequest = {
+  attackerArmy: string;
+  defenderTown: string;
+  soldiers: TownSoldiersPrimitives;
+};
