# src/apps/CryptoWars/backend/Controllers/Battles/ScheduleBattleRequest.ts
@@ -1,5 +1,0 @@
-export type ScheduleBattleRequest = {
-  attackerArmy: string;
-  defenderTown: string;
-  troop: Troop;
-};
