# src/apps/CryptoWars/backend/Routes/attacks.route.ts
@@ -1,0 +1,15 @@
+import { Router } from 'express';
+import container from '../dependency-injection';
+import { SendAttackPutController } from '../Controllers/Attacks/SendAttackPutController';
+import { requireAuth } from '../Auth';
+
+export const register = (router: Router) => {
+  const sendAttackPutController: SendAttackPutController = container.get(
+    'Apps.Battlefield.Backend.Controllers.SendAttackPutController'
+  );
+  router.put(
+    '/attacks/:id',
+    requireAuth,
+    sendAttackPutController.run.bind(sendAttackPutController)
+  );
+};
